@@ -1,5 +1,28 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
+    <a href="{% url 'course_page' id=course.id %}"><i class="fa fa-arrow-left" style="font-size:24px"></i> {{ course.course_name }}</a>
+    <h1>Grades</h1>
 
+    <table class="w3-table-all w3-centered">
+        <tbody>
+        <tr class="quiztablerow w3-dark-gray">
+            <th class="tablerowheader">Quizzes</th>
+            <th class="tablerowheader">Grade</th>
+        </tr>
+        {% for Quiz in quizzes %}
 
+            <tr>
+                <td class="cQuizList"><a
+                        href="{% url 'submission_view' cid=Quiz.course_id.id id=Quiz.id %} ">{{ Quiz.assignment_name }}</a>
+                </td>
+            </tr>
+        {% endfor %}
+
+        <tr class="quiztablerow w3-dark-gray">
+            <th class="tablerowheader">Homeworks</th>
+            <th class="tablerowheader">Grade</th>
+        </tr>
+        </tbody>
+    </table>
 {% endblock content %}
