@@ -1,0 +1,5 @@
+{% extends 'base.html' %}
+
+{% block content %}
+    <a href="{% url 'assignment_list' cid=course.id %}"><i class="fa fa-arrow-left" style="font-size:24px"></i>Grades</a>
+{% endblock content %}
